Fixed bug #40036 (empty() does not work correctly with ArrayObject when using ARRAY_AS_PROPS).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@226614 c90b9560-bf6c-de11-be94-00142212c4b1